# sandbox

./: CMakeLists.txt  README.md
assets/: saske.txt
include/: asset_manager.h  game.h  input.h  main.h  renderer.h  utils.h  world.h
include/ecs/: components.h  entity.h
include/ecs/systems/player/: player_movement.h
include/ecs/systems/sprite/: sprite_animation.h  sprite_rendering.h  sprite_sort.h  sprite_update_position.h
include/events/: events.h  keyboard.h
include/systems/: conways_game_of_life.h  falling_sand.h  newtonian_gravity.h  render.h
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/stb_image/: CMakeLists.txt
src/: CMakeLists.txt  main.c  renderer.c  utils.c  world.c
src/shaders/: default.frag  default.vert  passthrough.frag  passthrough.vert
src/systems/: conways_game_of_life.c  falling_sand.c  newtonian_gravity.c  render.c
